--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="container">
             <div class="inner-container">
-                <section class="flex-container-1">
+                <section class="card">
                     <article class="article">
                         <h1>Who am I?</h1>
                         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -29,14 +29,14 @@
                     </article>
                 </section>
 
-                <section class="flex-container-2">
+                <section class="card">
                     <h1>Projects</h1>
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Explicabo aliquid possimus cupiditate porro obcaecati labore dignissimos ab quis, dolore optio nihil non repudiandae, 
                         aperiam officiis exercitationem repellat dicta eaque. Tempora!</p>
                 </section>
 
-                <section class="flex-container-3">
+                <section class="card">
                     <h1>Goals</h1>
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Explicabo aliquid possimus cupiditate porro obcaecati labore dignissimos ab quis, dolore optio nihil non repudiandae, 
