creating link buttons

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         </div>
     </main>
 
-    <footer class="contact-info">
+    <footer>
         <h1>Contact</h1>
+
     </footer>
 </body>
 </html>
