Styling links and replacing dummy text with information

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                 <section class="card">
                     <article class="article">
                         <h1>Who am I?</h1>
-                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Explicabo aliquid possimus cupiditate porro obcaecati labore dignissimos ab quis, dolore optio nihil non repudiandae, 
-                            aperiam officiis exercitationem repellat dicta eaque. Tempora!</p>
+                        <p class="paragraph">My name is Nicholas Stypinski.  I am a student in The Ohio State University Full Stack 
+                            Developer Bootcamp.
+                        </p>
                     </article>
                 </section>
 
                 <section class="card">
-                    <h1>Projects</h1>
+                    <h1>Projects and Skills</h1>
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Explicabo aliquid possimus cupiditate porro obcaecati labore dignissimos ab quis, dolore optio nihil non repudiandae, 
                         aperiam officiis exercitationem repellat dicta eaque. Tempora!</p>
