Adding biographical information

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <article class="article">
                         <h1>Who am I?</h1>
                         <p class="paragraph">My name is Nicholas Stypinski.  I am a student in The Ohio State University Full Stack 
-                            Developer Bootcamp.
+                            Developer Bootcamp.  My goal is to become a junior full stack developer.
                         </p>
                     </article>
                 </section>
