Adding biographical information and tweaking CSS

--- a/index.html
+++ b/index.html
@@ -26,14 +26,23 @@
                         <p class="paragraph">My name is Nicholas Stypinski.  I am a student in The Ohio State University Full Stack 
                             Developer Bootcamp.  My goal is to become a junior full stack developer.
                         </p>
+                        <p class="paragraph">
+                            I have played around with coding off and on since high school.  I started to take it seriously in the winter of 2022 when I bought
+                            my first Udemy courses on HTML and CSS.  From there it was finding out more of what I wanted to do with coding.
+                        </p>
+                        <p class="paragraph">
+                            I enjoy the prospect of building something with my hands and troubleshooting.  From when I built my first computer, I enjoy the challenge of 
+                            building something and making it work.  And I love the problem solving aspect of development.  Thank you for visiting my portfolio.
+                        </p>
                     </article>
                 </section>
 
-                <section class="card">
+                <section class="card projects">
                     <h1>Projects and Skills</h1>
-                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Explicabo aliquid possimus cupiditate porro obcaecati labore dignissimos ab quis, dolore optio nihil non repudiandae, 
-                        aperiam officiis exercitationem repellat dicta eaque. Tempora!</p>
+                    <ul>
+                        <li>Placeholder</li>
+                        <li>placeholder</li>
+                    </ul>
                 </section>
 
                 <section class="card">
