Adding biographical information and tweaking CSS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="container">
             <div class="inner-container">
-                <section class="card">
+                <section class="card biography">
                     <article class="article">
                         <h1>Who am I?</h1>
                         <p class="paragraph">My name is Nicholas Stypinski.  I am a student in The Ohio State University Full Stack 
