--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
    
     <header>
         <nav class="nav">
-            <a href="www.google.com">placeholder</a>
-            <a href="www.google.com">placeholder</a>
-            <a href="www.google.com">placeholder</a>
+            <a href="#biography">placeholder</a>
+            <a href="#projects">placeholder</a>
+            <a href="#goals">placeholder</a>
         </nav>
     </header>
     <main class="hero">
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="inner-container">
                 <section class="card biography">
-                    <article class="article">
+                    <article id="#biography" class="article">
                         <h1>Who am I?</h1>
                         <p class="paragraph">My name is Nicholas Stypinski.  I am a student in The Ohio State University Full Stack 
                             Developer Bootcamp.  My goal is to become a junior full stack developer.
@@ -37,15 +37,16 @@
                     </article>
                 </section>
 
-                <section class="card projects">
+                <section id="#projects" class="card projects">
                     <h1>Projects and Skills</h1>
+                    <p class="paragraph">Below is a list of projects I have accomplished so far.</p>
                     <ul>
-                        <li>Placeholder</li>
+                        <li>HTML Refactoring.  This was a simple project where I took some code, cleaned it up to HTML sematic standards.</li>
                         <li>placeholder</li>
                     </ul>
                 </section>
 
-                <section class="card">
+                <section id="#goals" class="card">
                     <h1>Goals</h1>
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Explicabo aliquid possimus cupiditate porro obcaecati labore dignissimos ab quis, dolore optio nihil non repudiandae, 
