adding link styling and links to projects

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
    
     <header>
         <nav class="nav">
-            <a href="#biography">placeholder</a>
-            <a href="#projects">placeholder</a>
-            <a href="#goals">placeholder</a>
+            <a href="#biography" class="nav-link">placeholder</a>
+            <a href="#projects" class="nav-link">placeholder</a>
+            <a href="#goals" class="nav-link">placeholder</a>
         </nav>
     </header>
     <main class="hero">
@@ -42,7 +42,7 @@
                     <p class="paragraph">Below is a list of projects I have accomplished so far.</p>
                     <ul>
                         <li>HTML Refactoring.  This was a simple project where I took some code, cleaned it up to HTML sematic standards.</li>
-                        <li>placeholder</li>
+                        <li><a href="https://snubstumpy2007.github.io/Homework-Week-1/"><img src="/home page.jpg" alt="Home page for a website"></a></li>
                     </ul>
                 </section>
 
