adding colors and formatting media screens

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         <div class="container">
             <div class="inner-container">
-                <section class="card biography">
-                    <article id="#biography" class="article">
+                <section class="card">
+                    <article id="#biography" class="biography">
                         <h1>Who am I?</h1>
                         <p class="paragraph">My name is Nicholas Stypinski.  I am a student in The Ohio State University Full Stack 
                             Developer Bootcamp.  My goal is to become a junior full stack developer.
@@ -37,20 +37,24 @@
                     </article>
                 </section>
 
-                <section id="#projects" class="card projects">
-                    <h1>Projects and Skills</h1>
-                    <p class="paragraph">Below is a list of projects I have accomplished so far.</p>
-                    <ul>
-                        <li>HTML Refactoring.  This was a simple project where I took some code, cleaned it up to HTML sematic standards.</li>
-                        <li><a href="https://snubstumpy2007.github.io/Homework-Week-1/"><img src="/home page.jpg" alt="Home page for a website"></a></li>
-                    </ul>
+                <section class="card">
+                    <article id="#projects" class="projects">
+                        <h1>Projects and Skills</h1>
+                        <p class="paragraph">Below is a list of projects I have accomplished so far.</p>
+                        <ul>
+                            <li>HTML Refactoring.  This was a simple project where I took some code, cleaned it up to HTML sematic standards.</li>
+                            <li><a href="https://snubstumpy2007.github.io/Homework-Week-1/"><img src="/home page.jpg" alt="Home page for a website"></a></li>
+                        </ul>
+                    </article>
                 </section>
 
-                <section id="#goals" class="card">
-                    <h1>Goals</h1>
-                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Explicabo aliquid possimus cupiditate porro obcaecati labore dignissimos ab quis, dolore optio nihil non repudiandae, 
-                        aperiam officiis exercitationem repellat dicta eaque. Tempora!</p>
+                <section class="card">
+                    <article id="#goals" class="goals">
+                        <h1>Goals</h1>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Explicabo aliquid possimus cupiditate porro obcaecati labore dignissimos ab quis, dolore optio nihil non repudiandae, 
+                            aperiam officiis exercitationem repellat dicta eaque. Tempora!</p>
+                    </article>
                 </section>
             </div>
         
