adding biographical information and formatting.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
    
     <header>
         <nav class="nav">
-            <a href="#biography" class="nav-link">placeholder</a>
-            <a href="#projects" class="nav-link">placeholder</a>
-            <a href="#goals" class="nav-link">placeholder</a>
+            <a href="#biography" class="nav-link">Biography</a>
+            <a href="#projects" class="nav-link">Projects</a>
+            <a href="#goals" class="nav-link">Goals</a>
         </nav>
     </header>
     <main class="hero">
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="inner-container">
                 <section class="card">
-                    <article id="#biography" class="biography">
+                    <article id="biography" class="biography">
                         <h1>Who am I?</h1>
                         <p class="paragraph">My name is Nicholas Stypinski.  I am a student in The Ohio State University Full Stack 
                             Developer Bootcamp.  My goal is to become a junior full stack developer.
@@ -38,7 +38,7 @@
                 </section>
 
                 <section class="card">
-                    <article id="#projects" class="projects">
+                    <article id="projects" class="projects">
                         <h1>Projects and Skills</h1>
                         <p class="paragraph">Below is a list of projects I have accomplished so far.</p>
                         <ul>
@@ -49,20 +49,20 @@
                 </section>
 
                 <section class="card">
-                    <article id="#goals" class="goals">
+                    <article id="goals" class="goals">
                         <h1>Goals</h1>
-                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Explicabo aliquid possimus cupiditate porro obcaecati labore dignissimos ab quis, dolore optio nihil non repudiandae, 
-                            aperiam officiis exercitationem repellat dicta eaque. Tempora!</p>
+                        <p class="paragraph">My inital goals in this journey is to obtain a Junior Developer job and get some experience.
+                            Then I want to expand my horizons into software development, game development, and other areas.
+                        </p>
                     </article>
                 </section>
             </div>
         
         
             <aside>
-                <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Explicabo aliquid possimus cupiditate porro obcaecati labore dignissimos ab quis, dolore optio nihil non repudiandae, 
-                    aperiam officiis exercitationem repellat dicta eaque. Tempora!</p>
+                <p class="paragraph">I'm currently in the process of learning the various technologys of full stack development.
+                    I will learn JavaScript, React, Web APIs, and a host of other technologies.
+                </p>
             </aside>
         </div>
     </main>
