Cleaning up CSS media screens and formatting.

--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
         </div>
     </main>
 
-    <footer>
+    <footer class="card">
         <h1>Contact</h1>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/nicholas-stypinski-98261482/">Linkedin</a></li>
+        </ul>
 
     </footer>
 </body>
