--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <p class="paragraph">Below is a list of projects I have accomplished so far.</p>
                         <ul>
                             <li>HTML Refactoring.  This was a simple project where I took some code, cleaned it up to HTML sematic standards.</li>
-                            <li><a href="https://snubstumpy2007.github.io/Homework-Week-1/"><img src="/home page.jpg" alt="Home page for a website"></a></li>
+                            <li class="scale"><a href="https://snubstumpy2007.github.io/Homework-Week-1/"><img src="/home page.jpg" alt="Home page for a website"></a></li>
                         </ul>
                     </article>
                 </section>
@@ -60,6 +60,9 @@
         
         
             <aside>
+                <div class="bio-pic">
+                    <img src="Michigan.jpg" alt="Profile Picture">
+                </div>
                 <p class="paragraph">I'm currently in the process of learning the various technologys of full stack development.
                     I will learn JavaScript, React, Web APIs, and a host of other technologies.
                 </p>
