final formatting and added comments.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
             <a href="#biography" class="nav-link">Biography</a>
             <a href="#projects" class="nav-link">Projects</a>
             <a href="#goals" class="nav-link">Goals</a>
+            <a href="#contact" class="nav-link">Contact</a>
         </nav>
     </header>
     <main class="hero">
 
+        <!-- Containers for various information.  Set to flex display for all screens.  First one is a biography -->
         <div class="container">
             <div class="inner-container">
                 <section class="card">
@@ -37,6 +39,7 @@
                     </article>
                 </section>
 
+                <!-- Card for projects completed -->
                 <section class="card">
                     <article id="projects" class="projects">
                         <h1>Projects and Skills</h1>
@@ -48,6 +51,7 @@
                     </article>
                 </section>
 
+                <!-- Card for goals for my future -->
                 <section class="card">
                     <article id="goals" class="goals">
                         <h1>Goals</h1>
@@ -58,7 +62,7 @@
                 </section>
             </div>
         
-        
+            <!-- Aside with bio picture and short blurb -->
             <aside>
                 <div class="bio-pic">
                     <img src="Michigan.jpg" alt="Profile Picture">
@@ -69,8 +73,8 @@
             </aside>
         </div>
     </main>
-
-    <footer class="card">
+ <!-- Contact information with Linkedin -->
+    <footer class="card" id="contact">
         <h1>Contact</h1>
         <ul>
             <li><a href="https://www.linkedin.com/in/nicholas-stypinski-98261482/">Linkedin</a></li>
